refactor: view에 존재하는 이름에 대한 validation 로직 모델로 이관